Tue Jan 26 09:25:21 NZDT 2010
    *  The first version